--- a/custom.css
+++ b/custom.css
@@ -40,7 +40,11 @@ input{
     background: white;
     border: none;
     border-radius: 16px;
+    font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;;
+    font-size: 15.5px;
+    line-height: 1.4;
 }
+
 textarea{
     width: 100%;
     max-width: 100%;
@@ -50,9 +54,6 @@ textarea{
     border-radius: 16px;
     border: 1px solid black;
     border-radius: 16px;
-}
-.comment_ifr, .tox-editor-container, .comment-box{
-    background: rgba(255, 255, 255, 0.5);
 }
 ::placeholder {
     font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;;
@@ -92,6 +93,9 @@ textarea{
     border-radius: 16px;
     word-wrap: break-word;
     padding: 10px;
+    font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;;
+    font-size: 15.5px;
+    line-height: 1.4;
 }
 
 .container-form{
