--- a/custom.css
+++ b/custom.css
@@ -12,11 +12,21 @@ h1{
     margin-top: 15px;
     margin-bottom: 40px;
     word-wrap: break-word;
+    padding: 0 10px;
+}
+br{
+    height: 0;
+}
+p{
+    padding: 5px 7px;
+
 }
 h2{
     font-family: sans-serif;
     text-align: center;
     word-wrap: break-word;
+    margin-top: 15px;
+    margin-bottom: 25px;
 }
 body{
     font-family: sans-serif;
@@ -33,7 +43,6 @@ body{
     box-sizing: border-box;
     border-radius: 16px;
 }
-
 input{
     width: 100%;
     padding: 12px 20px;
@@ -44,7 +53,6 @@ input{
     font-size: 15.5px;
     line-height: 1.4;
 }
-
 textarea{
     width: 100%;
     max-width: 100%;
@@ -53,7 +61,6 @@ textarea{
     background: rgba(255, 255, 255, 0.5);
     border-radius: 16px;
     border: 1px solid black;
-    border-radius: 16px;
 }
 ::placeholder {
     font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;;
@@ -61,15 +68,12 @@ textarea{
     line-height: 1.4;
 }
 .button {
+    margin: 30px auto 45px auto;
     background: #42bda4;
     color: white;
     padding: 15px 40px;
-    margin-top: 20px;
     cursor: pointer;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 45px;
     border-radius: 16px;
     border: none;
     font-size: 17px;
@@ -78,26 +82,47 @@ textarea{
 .button:hover {
     background-color: #2e8674;
 }
-
 .button:active {
     background-color:  #2e8674;
     box-shadow: 0 2px #2e8674;
     transform: translateY(4px);
 }
 .comment-box{
-    margin-top: 30px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 20px;
+    margin: 30px auto 20px auto;
     background: white;
     border-radius: 16px;
     word-wrap: break-word;
-    padding: 10px;
+    padding: 10px 10px 20px;
     font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;;
     font-size: 15.5px;
     line-height: 1.4;
 }
+.author-container:not(:first-child){
+    margin-top: 20px;
+}
+.author-container{
+    font-weight: 500;
+    display: inline-block;
+}
+.author-mail, .author-id{
+    margin-left: 4px;
+}
+a:hover{
+    background-color: lightgray;
+    border-radius: 16px;
 
+}
+.comment-box a {
+    color: black;
+    cursor: pointer;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 13px;
+    padding: 5px 10px;
+    margin-top: 10px;
+    margin-bottom: ;
+    float: right;
+}
 .container-form{
     width: 80%;
     margin: auto;
@@ -105,12 +130,8 @@ textarea{
     padding: 5px;
 }
 
-@media screen and (max-width: 600px){
-    .button{
+@media screen and (max-width: 700px){
 
-        max-width: 100%;
-        font-size: 8px;
-        word-wrap: break-word;
-    }
 
-}    
+
+}
