--- a/custom.css
+++ b/custom.css
@@ -29,9 +29,14 @@ h2{
     margin-bottom: 25px;
 }
 body{
+    position: relative;
     font-family: sans-serif;
     background: linear-gradient(320deg, #eb92be, #ffef78,#63c9b4);
     height: 100vh;
+}
+.blur-body{
+    width: 100%;
+    height: 100%;
 }
 .container{
     width: 40%;
@@ -40,7 +45,6 @@ body{
     margin-top: 80px;
     background: rgba(255, 255, 255, 0.5);
     padding: 5px;
-    box-sizing: border-box;
     border-radius: 16px;
 }
 input{
@@ -54,20 +58,24 @@ input{
     line-height: 1.4;
 }
 textarea{
+    background: white;
     width: 100%;
     max-width: 100%;
     min-width: 100%;
     padding: 12px 20px;
-    background: rgba(255, 255, 255, 0.5);
     border-radius: 16px;
-    border: 1px solid black;
+    font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;;
+    font-size: 15.5px;
+    line-height: 1.4;
+    border: none;
+    resize: none;
 }
 ::placeholder {
     font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;;
     font-size: 15.5px;
     line-height: 1.4;
 }
-.button {
+.button{
     margin: 30px auto 45px auto;
     background: #42bda4;
     color: white;
@@ -92,17 +100,20 @@ textarea{
     background: white;
     border-radius: 16px;
     word-wrap: break-word;
-    padding: 10px 10px 20px;
+    padding: 0px 10px 30px;
     font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;;
     font-size: 15.5px;
     line-height: 1.4;
 }
 .author-container:not(:first-child){
     margin-top: 20px;
+    /*border-top: 1px solid gray;*/
+
 }
 .author-container{
     font-weight: 500;
-    display: inline-block;
+    display: block;
+    padding-top: 16px;
 }
 .author-mail, .author-id{
     margin-left: 4px;
@@ -113,14 +124,14 @@ a:hover{
 
 }
 .comment-box a {
+    display: block;
     color: black;
     cursor: pointer;
     text-decoration: none;
     font-weight: 500;
     font-size: 13px;
     padding: 5px 10px;
-    margin-top: 10px;
-    margin-bottom: ;
+    margin-top: 20px;
     float: right;
 }
 .container-form{
@@ -129,6 +140,37 @@ a:hover{
     background: rgba(255, 255, 255, 0);
     padding: 5px;
 }
+iframe{
+    position: fixed;
+    width: 50%;
+    height: 40%;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    z-index: 2;
+    border-radius: 16px;
+
+}
+#iframe-hidden{
+    visibility: hidden ;
+}
+#exit{
+    font-size: 20px;
+    font-weight: bold;
+    visibility: hidden;
+    cursor: pointer;
+    margin-left: 98.3%;
+}
+#exit:hover{
+    background-color: inherit;
+}
+/*.answers{
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 150px;
+    border-radius: 16px;
+}*/
 
 @media screen and (max-width: 700px){
 
