--- a/answers.css
+++ b/answers.css
@@ -25,10 +25,21 @@ body{
     padding: 5px;
     border-radius: 16px;
 }
+input{
+    width: 100%;
+    padding: 12px 20px;
+    background: white;
+    border: none;
+    border-radius: 16px;
+    font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;;
+    font-size: 15.5px;
+    line-height: 1.4;
+}
 textarea{
     width: 100%;
     max-width: 100%;
     min-width: 100%;
+    margin-top: 20px;
     padding: 12px 20px;
     background: white;
     border-radius: 16px;
