--- a/custom.css
+++ b/custom.css
@@ -29,14 +29,10 @@ h2{
     margin-bottom: 25px;
 }
 body{
-    position: relative;
+    padding: 1px;
     font-family: sans-serif;
     background: linear-gradient(320deg, #eb92be, #ffef78,#63c9b4);
     height: 200vh;
-}
-.blur-body{
-    width: 100%;
-    height: 100%;
 }
 .container{
     width: 40%;
@@ -80,7 +76,6 @@ textarea{
     background: #42bda4;
     color: white;
     padding: 15px 40px;
-    transition: 0.5s;
     cursor: pointer;
     display: block;
     border-radius: 16px;
@@ -101,22 +96,36 @@ textarea{
     background: white;
     border-radius: 16px;
     word-wrap: break-word;
-    padding: 0px 10px 30px;
+    padding: 0px 10px 50px;
     font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;;
     font-size: 15.5px;
     line-height: 1.4;
 }
 .author-container:not(:first-child){
     margin-top: 20px;
-    /*border-top: 1px solid gray;*/
-
 }
 .author-container{
     font-weight: 500;
     display: block;
     padding-top: 16px;
 }
+.author-container + p{
+    margin-bottom: 10px;
+}
+.author-container-answers{
+    font-weight: 500;
+    display: block;
+    padding-left: 20px;
+}
+.container-answers p{
+    padding-top: 4px;
+    padding-left:30px;
+
+}
 .author-mail, .author-id{
+    margin-left: 4px;
+}
+.author-mail-answers, .author-id-answers{
     margin-left: 4px;
 }
 .comment-box button:hover{
@@ -131,7 +140,7 @@ textarea{
     font-weight: 500;
     font-size: 13px;
     padding: 5px 10px;
-    margin-top: 15px;
+    margin-top: 5px;
     float: right;
     border-radius: 16px;
 }
@@ -150,28 +159,20 @@ iframe{
     translate: -50% -50%;
     z-index: 2;
     border-radius: 16px;
-
-}
-#iframe{
-
 }
 #exit{
+    position: fixed;
     font-size: 20px;
     font-weight: bold;
     visibility: hidden;
     cursor: pointer;
-    margin-left: 98.3%;
-}
-#exit:hover{
+    right: 20.6%;
+    top: 23.5%;
     background-color: inherit;
 }
-/*.answers{
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 150px;
-    border-radius: 16px;
-}*/
+#exit:hover{
+    font-size: 25px;
+}
 
 @media screen and (max-width: 700px){
 
