--- a/custom.css
+++ b/custom.css
@@ -95,7 +95,7 @@ textarea{
     background: white;
     border-radius: 16px;
     word-wrap: break-word;
-    padding: 0px 10px 50px;
+    padding: 0 10px 50px;
     font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;;
     font-size: 15.5px;
     line-height: 1.4;
