--- a/custom.css
+++ b/custom.css
@@ -3,6 +3,7 @@
     padding:0;
     margin: 0;
 }
+
 button{
     all:unset
 }
@@ -17,9 +18,6 @@ h1{
     word-wrap: break-word;
     padding: 0 10px;
 }
-p{
-    padding: 4px 7px;
-}
 h2{
     font-family: sans-serif;
     text-align: center;
@@ -30,14 +28,12 @@ h2{
 body{
     padding: 1px;
     font-family: sans-serif;
-    background: linear-gradient(320deg, #eb92be, #ffef78,#63c9b4);
-    height: 125vh;
+    background: linear-gradient(320deg, #eb92be, #ffef78,#63c9b4) fixed;
+    height: 100%;
 }
 .container{
     width: 40%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 80px;
+    margin: 80px auto 80px auto;
     background: rgba(255, 255, 255, 0.5);
     padding: 5px;
     border-radius: 16px;
@@ -101,7 +97,7 @@ textarea{
     line-height: 1.4;
 }
 .author-container:not(:first-child){
-    margin-top: 20px;
+    margin-top: 27px;
 }
 .author-container{
     font-weight: 500;
@@ -110,18 +106,33 @@ textarea{
 }
 .author-container + p{
     margin-bottom: 10px;
+    padding: 4px 7px;
 }
 .author-container-answers{
     font-weight: 500;
     display: block;
-    padding-left: 20px;
+    padding-left: 30px;
+}
+.container-answers{
+    position: relative;
+    margin-bottom: 5px;
+    font-size: 14.5px;
+    padding: 2px;
 }
 .container-answers p{
     padding-top: 4px;
-    padding-left:30px;
+    padding-left:40px;
 
 }
-.author-mail, .author-id{
+.response-arrow{
+    position: absolute;
+    font-size: 24.5px;
+}
+.author-tstamp{
+    color: grey;
+    font-size: 12px;
+}
+.author-mail, .author-id, .author-tstamp{
     margin-left: 4px;
 }
 .author-mail-answers, .author-id-answers{
