--- a/custom.css
+++ b/custom.css
@@ -32,7 +32,10 @@ body{
 }
 .container{
     width: 40%;
-    margin: 80px auto 80px auto;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
     background: rgba(255, 255, 255, 0.5);
     padding: 5px;
     border-radius: 16px;
