--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -167,7 +167,7 @@ textarea{
     font-weight: 500;
     font-size: 13px;
     padding: 5px 10px;
-    margin-top: 5px;
+    margin-top: 12px;
     float: right;
     border-radius: 16px;
 }
@@ -247,11 +247,38 @@ pre.code {
     overflow: auto;
     visibility: hidden;
 }
-ul {
-    margin-left: 20px;
+ul{
+    list-style-type: none;
 }
 li {
     padding: 5px;
+    margin-bottom: 5px;
+    list-style: none;
+    position: relative;
+}
+li:not(:last-child):after{
+    content:"";
+    display: block;
+    margin-top: 3em;
+    border-bottom: 1px solid grey;
+    width: 100%;
+}
+.logout{
+    position: fixed;
+    right: 0;
+    text-decoration: none;
+}
+.username{
+    font-weight: bold;
+    font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;;
+}
+.comment{
+    font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;;
+    margin-top: 3px;
+
+}
+.answer{
+
 }
 
 @media screen and (max-height: 800px){
