--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -3,6 +3,9 @@
     padding:0;
     margin: 0;
 }
+html{
+    height: auto;
+}
 button{
     all:unset
 }
@@ -29,16 +32,23 @@ body{
     font-family: sans-serif;
     background: linear-gradient(320deg, #eb92be, #ffef78,#63c9b4) fixed;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
 }
+
 .container{
-    width: 40%;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    translate: -50% -50%;
+    width: 50%;
+    height: 100%;
+    background-color: red;
+    /* top: 50%;
+    left: 50% */;
+    /* translate: -50% -50%; */
     background: rgba(255, 255, 255, 0.5);
     padding: 5px;
     border-radius: 16px;
+    
 }
 input{
     width: 100%;
@@ -249,14 +259,14 @@ pre.code {
 }
 ul{
     list-style-type: none;
+    display: inline;
 }
 li {
     padding: 5px;
-    margin-bottom: 5px;
     list-style: none;
     position: relative;
 }
-li:not(:last-child):after{
+.commentList:not(:last-child):after{
     content:"";
     display: block;
     margin-top: 3em;
@@ -267,8 +277,9 @@ li:not(:last-child):after{
     position: fixed;
     right: 0;
     text-decoration: none;
+    align-self: flex-start;
 }
-.username{
+.username, .username-answer{
     font-weight: bold;
     font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;;
 }
